[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.7.0",
    "aiosqlite>=0.20.0",
    "folium>=0.17.0",
    "geopy>=2.4.0",
    "google-genai>=1.0.0",
    "google-generativeai>=0.7.0",
    "pillow>=10.0.0",
]
